# qPCR_analysis

./: README.md  pyproject.toml
data/: test_data.csv
env/: pyvenv.cfg
qPCR_analysis/: Data_processing.py  Plotting.py  Tutorial.ipynb  __init__.py  module1.py
qPCR_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qPCR_analysis/.ipynb_checkpoints/: Data_processing-checkpoint.py  Plotting-checkpoint.py  Tutorial-checkpoint.ipynb  module1-checkpoint.py
qPCR_analysis/biological_data/: ATF4_polysome_profile.csv  ATF4_primer_Efficiency.csv  Gene_expression_analysis.csv
qPCR_analysis/data/: dilution_testdata.csv  polysome_profile_testdata.csv  test_data.csv
tests/: __init__.py  data_processing_tests.py
tests/.ipynb_checkpoints/: data_processing_tests-checkpoint.py  plotting_tests-checkpoint.py
